[gd_scene load_steps=3 format=3 uid="uid://y3hwpoytitrv"]

[ext_resource type="Script" path="res://UI/player_slot.gd" id="1_sjo07"]
[ext_resource type="Texture2D" uid="uid://c6i4sl3vnuxd7" path="res://TEXTURE_NULL.png" id="2_xrm5b"]

[node name="PlayerSlot" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(237, 108)
layout_mode = 3
anchors_preset = 0
offset_right = 237.0
offset_bottom = 128.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_sjo07")

[node name="PlayerName" type="Label" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 236.0
offset_bottom = 21.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "COOLPLAYERNAME2017"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayerIcon" type="TextureRect" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_vertical = 2
texture = ExtResource("2_xrm5b")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ChallengeButton" type="Button" parent="."]
custom_minimum_size = Vector2(37, 37)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 237.0
offset_bottom = 35.0
grow_vertical = 2
theme_override_font_sizes/font_size = 21
